fixed last contrast issue on form

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -406,7 +406,7 @@ form li {
 form input.submitBtn {
     border: none;
     background-color: #bf6E50;
-    color: white;
+    color: black;
     border-radius: 10px;
     padding: 1.2rem;
     width: 100%;
